[tool]
[tool.poetry]
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
authors = ["Leon Sixt <github@leon-sixt.de>"]
description = "A library to manange ML experiments."
homepage = "https://github.com/berleon/savethat"
license = "MIT"
name = "savethat"
packages = [
  {include = "savethat"},
  {include = "tests", format = "sdist"},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
toml = "^0.10.2"
reproducible = "^0.4.1"
loguru = "^0.6.0"
b2 = "^3.4.0"
typed-argument-parser = "^1.7.2"
anyconfig = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
mypy = "^0.950"
python-lsp-server = {extras = ["all"], version = "^1.4.1"}
black = "^22.3.0"
mkdocs = "^1.3.0"
cookiecutter = "^1.7.3"
mkdocs-include-markdown-plugin = "^3.4.0"
mkdocs-material = "^8.2.14"
mkdocstrings = "^0.18.1"
mkdocs-autorefs = "^0.4.1"
twine = "^4.0.0"
types-toml = "^0.10.7"
pytest-cov = "^3.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]



[tool.black]
line-length = 80
target-version = ['py39']
# experimental_string_processing = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 80
profile = 'black'
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
skip_gitignore = true
use_parentheses = true

# you can skip files as below
# skip_glob = docs/conf.py


[tool.pytest.ini_options]
addopts = "--cov-report html"
testpaths = ['tests']
filterwarnings = [
    'ignore:.*Create unlinked descriptors is going to go away.*:DeprecationWarning',
    # https://github.com/tensorflow/tensorboard/pull/5138
    'ignore:.*is a deprecated alias for the builtin.*:DeprecationWarning',
]
[tool.coverage.run]
source = ['savethat']
branch = true
# uncomment the following to omit files during running
# omit = []

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'def main'
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true

strict_optional = true
warn_redundant_casts = true
disallow_subclassing_any = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = false
no_implicit_reexport = false


[[tool.mypy.overrides]]
module = [
    "anyconfig",
    "b2sdk",
    "b2sdk.*",
    "b2sdk.v2",
    "coverage",
    "cookiecutter",
    "cookiecutter.*",
    "cpuinfo",
    "matplotlib",
    "pandas",
    "reproducible",
    "setuptools",
    "sklearn",
    "sklearn.*",
    "typing_inspect",
]
ignore_missing_imports = true
